--- a/tmas.html
+++ b/tmas.html
@@ -36,8 +36,8 @@
                 <p class="p2">
                     <br>
                 
-
-                   09368274530 | شماره سازندگان سایت :  09923004087
+شماره سازندگان سایت : 
+                   09368274530 |  09923004087
                 </p>
          
     </sepahbod-font>
