--- a/untitled.html
+++ b/untitled.html
@@ -139,11 +139,11 @@
 	<div style="float: right">
 	  <p class="p2">
 	<br>
-	    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;سیب زمینی<br>
+	   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;سیب زمینی<br>
 	   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; سیب زمینی ویژه<br>
 	    سیب زمینی با سس و قارچ <br>
-	    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; لازانیا <br>
-			     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; پیتزا پپرونی <br>
+	 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; لازانیا <br>
+			     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; پیتزا پپرونی <br>
 </p>
   </div>
 
@@ -153,7 +153,7 @@
 <br>نان سیر
 <br>کالزونه
 <br>پاستا با سس ال فردو
-<br> پاستا تنوری
+<br>پاستا تنوری
 </p>
 
 </div>	
