--- a/untitled.html
+++ b/untitled.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <h1>به کافه لاوندر خوش امدید</h1>
-      <p>از منو چیزی که میخواهید رو انتخواب کنید</p>
+      <p>از منو چیزی که میخواهید را انتخواب کنید</p>
       
     </main> </sepahbod-font>
   </div>
@@ -139,18 +139,18 @@
 	<div style="float: right">
 	  <p class="p2">
 	<br>
-	   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;سیب زمینی<br>
-	   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; سیب زمینی ویژه<br>
-	 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;کالزونه<br>
-	 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; لازانیا <br>
-			     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; پیتزا پپرونی <br>
+	 &nbsp; &nbsp; &nbsp;سیب زمینی<br>
+	  &nbsp; &nbsp; &nbsp;نان سیر<br>
+	 &nbsp; &nbsp; &nbsp;کالزونه<br>
+	 &nbsp; &nbsp; لازانیا <br>
+			      &nbsp; &nbsp; &nbsp; پیتزا پپرونی <br>
 </p>
   </div>
 
 <p class="p2">
 <br>پیتزا مرغ
 <br>پیتزا مخصوص
-<br>نان سیر
+<br>سیب زمینی ویزه
 <br>کالزونه
 <br>پاستا با سس ال فردو
 <br>پاستا تنوری
