--- a/untitled.html
+++ b/untitled.html
@@ -139,11 +139,11 @@
 	<div style="float: right">
 	  <p class="p2">
 	<br>
-	 &nbsp; &nbsp; &nbsp;سیب زمینی<br>
-	  &nbsp; &nbsp; &nbsp;نان سیر<br>
-	 &nbsp; &nbsp; &nbsp;کالزونه<br>
-	 &nbsp; &nbsp; لازانیا <br>
-	   &nbsp; &nbsp; &nbsp; پیتزا پپرونی <br>
+	 &nbsp;سیب زمینی<br>
+	 &nbsp;نان سیر<br>
+	&nbsp;کالزونه<br>
+	 &nbsp; لازانیا <br>
+	   &nbsp; پیتزا پپرونی <br>
 </p>
   </div>
 
